--- a/tumor-vision-frontend/package.json
+++ b/tumor-vision-frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.7",
     "framer-motion": "^12.12.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
