--- a/tumor-vision-backend/src/main/resources/application.properties
+++ b/tumor-vision-backend/src/main/resources/application.properties
@@ -1,10 +1,25 @@
-# MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/tumorvision
-spring.data.mongodb.database=tumorvision
+spring.application.name=TumorVision
 
-# JWT Secret Key (change this to something more secure later)
-jwt.secret=tumorVisionSecretKey
-jwt.expirationMs=86400000 # 24 hours
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb+srv://Waleed:#Waleedkhalid123@tumorvision.nmp2mud.mongodb.net/TumorVision?retryWrites=true&w=majority&appName=TumorVision
+
+
+spring.jmx.enabled=false
+
+# Email configuration for Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fitnesstan.pakistan@gmail.com
+spring.mail.password=kmcc kjtq kyko fayo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.debug=true # Optional, for debugging
+spring.mail.properties.mail.smtp.connectiontimeout=100000
+spring.mail.properties.mail.smtp.timeout=100000
+spring.mail.properties.mail.smtp.writetimeout=100000
+
 
 # Temporary admin user (we'll remove this later)
 spring.security.user.name=admin
