--- a/tumor-vision-frontend/package.json
+++ b/tumor-vision-frontend/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.12.1",
@@ -12,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "zustand": "^5.0.4"
