--- a/tumor-vision-frontend/package.json
+++ b/tumor-vision-frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-router": "^7.6.2",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
